Improve carousel sliding behavior and fix layout issues

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,7 +151,7 @@ input{
 }
 .sliding-cards {
   position: relative;
-  height: 400px; /* Set to your desired height */
+  height: 379px; /* Set to your desired height */
   overflow: hidden;
 }
 /* .carousel-inner {
@@ -167,8 +167,8 @@ input{
 } */
 .sliding-card{
     padding: 2rem 3rem;
-    box-shadow: 0px 2px 3px rgba(0.5, 0.5, 0.5, 0.5);
-    border-radius: 20px;
+    /* box-shadow: 0px 2px 3px rgba(5, 0.5, 0.5, 0.5); */
+    border-radius: 20px 20px 0 0;
     margin: 0 0 1rem 0;
 }
 .host{
